headerとfooterを追加、背景色やテキストのデザイン調整

--- a/index.html
+++ b/index.html
@@ -7,8 +7,37 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Portfolio</h1>
-    <div id="works"></div>
+    <header class="header">
+      <div class="logo">
+        <a href="index.html"><h1 class="logo-text">Portfolio</h1></a>
+      </div>
+      <button class="toggle-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav class="nav">
+        <ul class="nav-menu">
+          <li>
+            <a href="https://per-pj.github.io/per-pj/" target="_blank"
+              >ホームへ戻る</a
+            >
+          </li>
+          <li>
+            <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
+              >お問い合わせ</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <!-- <h1>Portfolio</h1> -->
+      <div id="works"></div>
+    </main>
+    <footer class="footer">
+      <p class="copyright">&copy; 2025 per-pj All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
