ファビコンの追加、タイポグラフィの改善、投稿カードの背景色と余白の修正、ボタンのカラー変更

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | per-pj</title>
+    <title>per-pj | Portfolio</title>
+    <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- header -->
     <header class="header">
       <div class="logo">
-        <a href="index.html"><h1 class="logo-text">Portfolio</h1></a>
+        <a href="index.html"><h1 class="logo-text">per-pj</h1></a>
       </div>
       <button class="toggle-menu">
         <span></span>
@@ -20,8 +22,11 @@
         <ul class="nav-menu">
           <li>
             <a href="https://per-pj.github.io/per-pj/" target="_blank"
-              >ホームへ戻る</a
+              >プロフィール</a
             >
+          </li>
+          <li>
+            <a href="#works">ポートフォリオ</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
@@ -35,9 +40,11 @@
       <!-- <h1>Portfolio</h1> -->
       <div id="works"></div>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <p class="copyright">&copy; 2025 per-pj All Rights Reserved.</p>
     </footer>
+    <!-- js -->
     <script src="script.js"></script>
   </body>
 </html>
