--- a/index.html
+++ b/index.html
@@ -32,21 +32,19 @@
       <nav class="nav">
         <ul class="nav-menu">
           <li>
-            <a href="#works">作品</a>
+            <a href="#works">PORTFOLIO</a>
+          </li>
+          <li>
+            <a href="https://per-pj.github.io/per-pj/" target="_blank">ABOUT</a>
           </li>
           <li>
             <a href="https://per-pj.github.io/per-pj/" target="_blank"
-              >プロフィール</a
-            >
-          </li>
-          <li>
-            <a href="https://per-pj.github.io/per-pj/" target="_blank"
-              >ナレッジ</a
+              >INSIGHTS</a
             >
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
-              >お問い合わせ</a
+              >CONTACT</a
             >
           </li>
         </ul>
@@ -55,7 +53,7 @@
     <!---------- main ---------->
     <main class="container">
       <div class="content">
-        <h1 class="title-text">プロダクト</h1>
+        <h1 class="title-text">Portfolio</h1>
         <p class="desc-text">
           興味のあるAPIを活用した個人開発のMVPの一部をデザインポートフォリオとして掲載しています。学習用に開発した実装コストの低いプロダクトです。今後も一部のプロダクトを掲載する予定です。
         </p>
