デザインの大幅なリニューアル

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -53,37 +53,41 @@
     <!---------- main ---------->
     <main class="container">
       <div class="content">
-        <h1 class="title-text">Portfolio</h1>
+        <h1 class="title-text">Designed & Built</h1>
+      </div>
+      <!-- icon -->
+      <div class="links">
+        <a
+          href="https://github.com/per-pj"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a
+          href="https://www.behance.net/per-pj"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fa-brands fa-behance"></i>
+        </a>
+        <a
+          href="https://forms.gle/f1VjgzjcUNBJVWAA9"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="fa-solid fa-envelope"></i>
+        </a>
+      </div>
+      <div class="text-container">
         <p class="desc-text">
-          興味のあるAPIを活用した個人開発のMVPの一部をデザインポートフォリオとして掲載しています。学習用に開発した実装コストの低いプロダクトです。今後も一部のプロダクトを掲載する予定です。
+          興味のあるAPIを活用して構築したMVPの一部をデザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
         </p>
-        <!-- icon -->
-        <div class="links">
-          <a
-            href="https://github.com/per-pj"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-          <a
-            href="https://www.behance.net/per-pj"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-brands fa-behance"></i>
-          </a>
-          <a
-            href="https://forms.gle/f1VjgzjcUNBJVWAA9"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i class="fa-solid fa-envelope"></i>
-          </a>
-        </div>
       </div>
       <!-- 投稿を表示 -->
-      <div id="works"></div>
+      <div class="works-content">
+        <div id="works"></div>
+      </div>
     </main>
     <!---------- footer ------------>
     <footer class="footer">
