レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             <a href="https://per-pj.github.io/per-pj/" target="_blank">ABOUT</a>
           </li>
           <li>
-            <a href="https://per-pj.github.io/per-pj/" target="_blank"
-              >INSIGHTS</a
-            >
+            <a href="https://sizu.me/per-pj/" target="_blank">INSIGHTS</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
@@ -52,7 +50,7 @@
     </header>
     <!---------- main ---------->
     <main class="container">
-      <div class="content">
+      <div class="hero-content">
         <h1 class="title-text">Designed & Built</h1>
       </div>
       <!-- icon -->
@@ -79,7 +77,7 @@
           <i class="fa-solid fa-envelope"></i>
         </a>
       </div>
-      <div class="text-container">
+      <div class="text-content">
         <p class="desc-text">
           興味のあるAPIを活用して構築したMVPの一部をデザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
         </p>
