--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://per-pj.github.io/per-pj/" target="_blank">ABOUT</a>
           </li>
           <li>
-            <a href="https://sizu.me/per-pj/" target="_blank">INSIGHTS</a>
+            <a href="https://sizu.me/per_pj/" target="_blank">INSIGHTS</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
