--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="https://per-pj.github.io/per-pj/" target="_blank">ABOUT</a>
           </li>
           <li>
-            <a href="https://sizu.me/per_pj/" target="_blank">INSIGHTS</a>
+            <a href="https://sizu.me/per_pj/" target="_blank">BLOG</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
@@ -93,7 +93,8 @@
       </div>
       <div class="text-content">
         <p class="desc-text">
-          興味のあるAPIを活用して構築したMVPの一部をデザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
+          興味のあるAPIを活用して構築したMVPの一部を
+          デザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
         </p>
       </div>
       <!-- 投稿を表示 -->
