aboutページの作成

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#works">PORTFOLIO</a>
           </li>
           <li>
-            <a href="https://per-pj.github.io/per-pj/" target="_blank">ABOUT</a>
+            <a href="about.html">ABOUT</a>
           </li>
           <li>
             <a href="https://sizu.me/per_pj/" target="_blank">BLOG</a>
