ヘッダーのリンクの修正、aboutページにリンクを追加

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <nav class="nav">
         <ul class="nav-menu">
           <li>
-            <a href="#works">PORTFOLIO</a>
+            <a href="index.html">PORTFOLIO</a>
           </li>
           <li>
             <a href="about.html">ABOUT</a>
@@ -69,12 +69,18 @@
       </div>
       <div class="text-content">
         <p class="desc-text">
-          per-pj は、Product Designer として働いています。
+          <a
+            href="https://per-pj.github.io/per-pj/"
+            class="link-text"
+            target="_blank"
+            >per-pj</a
+          >
+          は、Product Designer として働いています。
         </p>
         <div class="grid">
           <div class="grid-item">
             <img src="img/plan.svg" alt="plan" class="grid-img" />
-            <h2 class="sub-title">新規事業立案</h2>
+            <h2 class="sub-title">新規事業</h2>
             <p class="grid-desc-text">
               市場の潜在ニーズを捉え、新たなビジネスモデルやサービスを企画・立案し、新たな収益源の創出と事業成長に貢献します。
             </p>
