--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav class="nav">
         <ul class="nav-menu">
           <li>
-            <a href="#works">PORTFOLIO</a>
+            <a href="index.html">PORTFOLIO</a>
           </li>
           <li>
             <a href="about.html">ABOUT</a>
