CSSファイルの分割、フォルダ構成を変更、aboutページのgrid-itemのデザインを改善

--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
       gtag('config', 'G-RQ8PXS6MBM');
     </script>
     <link rel="icon" href="./favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -32,17 +32,14 @@
   <body>
     <!---------- header ---------->
     <header class="header">
-      <!-- logo -->
       <div class="logo">
         <a href="index.html" class="logo-text" aria-label="Home">per-pj</a>
       </div>
-      <!-- toggle -->
       <button class="toggle-menu">
         <span></span>
         <span></span>
         <span></span>
       </button>
-      <!-- menu -->
       <nav class="nav">
         <ul class="nav-menu">
           <li>
@@ -78,42 +75,42 @@
           は、Product Designer として働いています。
         </p>
         <div class="grid">
-          <div class="grid-item">
+          <div class="grid-item bg-plan">
             <img src="img/plan.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">新規事業</h2>
             <p class="grid-desc-text">
               市場の潜在ニーズを捉え、新たなビジネスモデルやサービスを企画・立案し、新たな収益源の創出と事業成長に貢献します。
             </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item bg-ux">
             <img src="img/ux.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">UXデザイン</h2>
             <p class="grid-desc-text">
               徹底的なユーザー理解に基づき、課題解決に繋がる最適なユーザー体験を設計。情報設計からプロトタイピング、テストまで一貫して担当し、顧客満足度向上を目指します。
             </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item bg-ui">
             <img src="img/ui.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">UIデザイン</h2>
             <p class="grid-desc-text">
               情報構造とユーザー心理に基づいた、直感的で美しいインターフェースを設計・実装。ブランドイメージを高め、ユーザーエンゲージメントの向上に貢献します。
             </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item bg-mvp">
             <img src="img/mvp.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">MVP構築</h2>
             <p class="grid-desc-text">
               HTML、CSS、JavaScriptなどを用いて、WebアプリケーションやWebサイトのユーザーインターフェースを開発・実装。ユーザーの操作性やパフォーマンスの向上へ。
             </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item bg-marketing">
             <img src="img/marketing.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">テストマーケティング</h2>
             <p class="grid-desc-text">
               新規事業やサービスを市場に投入する前に、仮説検証と改善を行うテストマーケティングを実施。リスクを最小限に抑え、成功確率を高めます。
             </p>
           </div>
-          <div class="grid-item">
+          <div class="grid-item bg-other">
             <img src="img/marketing.svg" alt="plan" class="grid-img" />
             <h2 class="sub-title">その他</h2>
             <p class="grid-desc-text">
@@ -128,6 +125,6 @@
       <p class="copyright">&copy; 2025 per-pj All Rights Reserved.</p>
     </footer>
     <!---------- js ---------->
-    <script src="script.js"></script>
+    <script src="../src/js/script.js"></script>
   </body>
 </html>
