--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       gtag('config', 'G-RQ8PXS6MBM');
     </script>
     <link rel="icon" href="./favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../src/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -32,17 +32,14 @@
   <body>
     <!---------- header ---------->
     <header class="header">
-      <!-- logo -->
       <div class="logo">
         <a href="index.html" class="logo-text" aria-label="Home">per-pj</a>
       </div>
-      <!-- toggle -->
       <button class="toggle-menu">
         <span></span>
         <span></span>
         <span></span>
       </button>
-      <!-- menu -->
       <nav class="nav">
         <ul class="nav-menu">
           <li>
@@ -97,7 +94,7 @@
           デザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
         </p>
       </div>
-      <!-- 投稿を表示 -->
+      <!-- posts -->
       <div class="works-content">
         <div id="works"></div>
       </div>
@@ -107,6 +104,6 @@
       <p class="copyright">&copy; 2025 per-pj All Rights Reserved.</p>
     </footer>
     <!---------- js ---------->
-    <script src="script.js"></script>
+    <script src="../src/js/script.js"></script>
   </body>
 </html>
