--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
       gtag('config', 'G-RQ8PXS6MBM');
     </script>
     <link rel="icon" href="./favicon.ico" />
-    <link rel="stylesheet" href="../src/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -125,6 +125,6 @@
       <p class="copyright">&copy; 2025 per-pj All Rights Reserved.</p>
     </footer>
     <!---------- js ---------->
-    <script src="../src/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
