ヘッダーのテキストの修正、aboutページの説明文の内容の変更

--- a/public/about.html
+++ b/public/about.html
@@ -43,17 +43,17 @@
       <nav class="nav">
         <ul class="nav-menu">
           <li>
-            <a href="index.html">PORTFOLIO</a>
+            <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">ABOUT</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="https://sizu.me/per_pj/" target="_blank">BLOG</a>
+            <a href="https://sizu.me/per_pj/" target="_blank">Blog</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
-              >CONTACT</a
+              >Contact</a
             >
           </li>
         </ul>
@@ -62,17 +62,17 @@
     <!---------- main ---------->
     <main class="container">
       <div class="hero-content">
-        <h1 class="title-text">ABOUT</h1>
+        <h1 class="title-text">About</h1>
       </div>
       <div class="text-content">
         <p class="desc-text">
+          Product Designer:
           <a
             href="https://per-pj.github.io/per-pj/"
             class="link-text"
             target="_blank"
             >per-pj</a
           >
-          は、Product Designer として働いています。
         </p>
         <div class="grid">
           <div class="grid-item bg-plan">
