--- a/public/index.html
+++ b/public/index.html
@@ -43,17 +43,17 @@
       <nav class="nav">
         <ul class="nav-menu">
           <li>
-            <a href="index.html">PORTFOLIO</a>
+            <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">ABOUT</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="https://sizu.me/per_pj/" target="_blank">BLOG</a>
+            <a href="https://sizu.me/per_pj/" target="_blank">Blog</a>
           </li>
           <li>
             <a href="https://forms.gle/f1VjgzjcUNBJVWAA9" target="_blank"
-              >CONTACT</a
+              >Contact</a
             >
           </li>
         </ul>
