--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,12 @@
       gtag('config', 'G-RQ8PXS6MBM');
     </script>
     <link rel="icon" href="./favicon.ico" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/base/reset.css" />
+    <link rel="stylesheet" href="./css/base/base.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/layout/header.css" />
+    <link rel="stylesheet" href="./css/layout/footer.css" />
+    <link rel="stylesheet" href="./css/base/responsive.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
