gridレイアウトの変更、ヒーロータイトルのテキスト変更

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="about.html">About</a>
+            <a href="https://per-pj.github.io/per-pj/" target="_blank">About</a>
           </li>
           <li>
             <a href="https://sizu.me/per_pj/" target="_blank">Blog</a>
@@ -67,9 +67,10 @@
     <!---------- main ---------->
     <main class="container">
       <div class="hero-content">
-        <h1 class="title-text">Designed & Built</h1>
+        <h1 class="title-text">デザイン & エンジニアリング</h1>
       </div>
       <!-- icon -->
+      <!--
       <div class="links">
         <a
           href="https://github.com/per-pj"
@@ -93,10 +94,11 @@
           <i class="fa-solid fa-envelope"></i>
         </a>
       </div>
+      -->
       <div class="text-content">
         <p class="desc-text">
-          興味のあるAPIを活用して構築したMVPの一部を
-          デザインポートフォリオとして掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
+          興味のあるAPIを活用して構築したMVPの一部を デザインポートフォリオ
+          として掲載しています。市場規模、介入価値、競合優位性などは考慮していないのでご注意ください。学習用に開発した実装コストの低いプロダクトです。今後も一部の公開可能なプロダクトを掲載する予定です。
         </p>
       </div>
       <!-- posts -->
